--- a/index.html
+++ b/index.html
@@ -18,12 +18,14 @@
                     <a href="" class="nav__link--anchor
                     link__hover-effect
                     link__hover-effect--black
+                    nav__link--anchor-primary
                     ">Languages</a>
                 </li>
                 <li>
                     <a href="" class="nav__link--anchor
                     link__hover-effect
                     link__hover-effect--black
+                    nav__link--anchor-primary
                     ">Projects</a>
                 </li>
                 <li>
@@ -42,11 +44,12 @@
                     <h1 class="about-me__info--title">Hey!I'm <span class="text--MyName">Elio Ghanem</span> </h1>
                     <p class="about-me__info--para">I'm a junior <strong class="text--MyName">frontend software engineer</strong> with a strong passion for building website's.</p>
                     <div class="about-me__links">
-                        <a href="" class="about-me__links"><i class="fab fa-linkedin-in"></i></a>
-                        <a href="" class="about-me__links"><i class="fab fa-github"></i></a>
-                        <a href="" class="about-me__links"><i class="far fa-envelope"></i></a>
-                        <a href="" class="about-me__links"><i class="fas fa-file-pdf"></i></a>
+                        <a href="#" class="about-me__link"><i class="fab fa-linkedin-in"></i></a>
+                        <a href="#" class="about-me__link"><i class="fab fa-github"></i></a>
+                        <a href="#" class="about-me__link"><i class="far fa-envelope"></i></a>
+                        <a href="#" class="about-me__link"><i class="fas fa-file-pdf"></i></a>
                     </div>
+
                 </div>
                 <figure class="about-me__img--container">
                     <img src="./img portofolio/undraw_working_remotely_jh40 (1).png" class="about-me__img" alt="">
