adding footer,links for nav and adding contact section

--- a/index.html
+++ b/index.html
@@ -4,33 +4,29 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
     <link rel="stylesheet" href="./style.css">
-    <script src="https://kit.fontawesome.com/c8e4d183c2.js" crossorgin="anonymous"></script>
+    <title>Document</title>
+    <script src="https://kit.fontawesome.com/c8e4d183c2.js" crossorigin="anonymous"></script>
 </head>
 
 <body>
     <section id="about-me">
         <nav>
-            <div class="personal__logo">Elio Ghanem</div>
-            <ul class="nav__lisk--list">
+            <div class="my-name">Elio Ghanem</div>
+            <ul class="nav__link--list">
                 <li>
-                    <a href="" class="nav__link--anchor
-                    link__hover-effect
-                    link__hover-effect--black
-                    nav__link--anchor-primary
+                    <a href="#languages" class="nav__link--anchor
+                    nav__link-anchor--primary
                     ">Languages</a>
                 </li>
                 <li>
-                    <a href="" class="nav__link--anchor
-                    link__hover-effect
-                    link__hover-effect--black
-                    nav__link--anchor-primary
+                    <a href="#projects" class="nav__link--anchor
+                    nav__link-anchor--primary
                     ">Projects</a>
                 </li>
                 <li>
-                    <a href="" class="nav__link--anchor
-                    nav__link--anchor-primary
+                    <a href="#contact" class="nav__link--anchor
+                    nav__link-anchor--primary
                     ">Contact</a>
                 </li>
             </ul>
@@ -39,66 +35,66 @@
             <div class="about-me__info row">
                 <div class="about-me__info--container">
                     <figure class="about-me__picture--mask">
-                        <img src="./img portofolio/elioghanemMyphoto.jpeg" class="about-me__picture" alt="picture of me">
+                        <img src="./img portofolio/elioghanemMyphoto.jpeg" class="about-me__picture">
                     </figure>
-                    <h1 class="about-me__info--title">Hey!I'm <span class="text--MyName">Elio Ghanem</span> </h1>
-                    <p class="about-me__info--para">I'm a junior <strong class="text--MyName">frontend software engineer</strong> with a strong passion for building website's.</p>
+                    <h1 class="about-me__info--title">Hey! I'm <span class=" my-color ">Elio Ghanem</span></h1>
+                    <p class="about-me__info--para">I'm a <span class="my-color "> junior frontend software engineer </span>with a strong passion of building responsive and performant web applications.</p>
                     <div class="about-me__links">
-                        <a href="#" class="about-me__link"><i class="fab fa-linkedin-in"></i></a>
-                        <a href="#" class="about-me__link"><i class="fab fa-github"></i></a>
-                        <a href="#" class="about-me__link"><i class="far fa-envelope"></i></a>
-                        <a href="#" class="about-me__link"><i class="fas fa-file-pdf"></i></a>
+                        <a href="" class="about-me__link"><i class="fab fa-linkedin-in"></i></a>
+                        <a href="" class="about-me__link"><i class="fab fa-github"></i></a>
+                        <a href="" class="about-me__link"><i class="far fa-envelope"></i></a>
+                        <a href="" class="about-me__link"><i class="fas fa-file-pdf"></i></a>
                     </div>
-
                 </div>
                 <figure class="about-me__img--container">
-                    <img src="./img portofolio/undraw_working_remotely_jh40 (1).png" class="about-me__img" alt="">
+                    <img src="./img portofolio/undraw_working_remotely_jh40 (1).png" class="about-me__img">
                 </figure>
             </div>
         </div>
     </section>
-    <section id="Languages">
-
-        <h1 class="section__title">This is my <span class="text--MyName"> technology stack</span></h1>
-        <div class="language__list">
-            <div class="language">
-                <figure class="language__img--wrapper">
-                    <img src="./img portofolio/html logo 2.png" alt="" class="language__img HTML">
-                </figure>
-                <span class="language__name">HTML</span>
-            </div>
-            <div class="language">
-                <figure class="language__img--wrapper">
-                    <img src="./img portofolio/css logo 3.jpeg" alt="" class="language__img css ">
-                </figure>
-                <span class="language__name">CSS</span>
-            </div>
-            <div class="language">
-                <figure class="language__img--wrapper">
-                    <img src="./img portofolio/js logo.png" alt="" class="language__img  ">
-                </figure>
-                <span class="language__name">JS</span>
-            </div>
-            <div class="language">
-                <figure class="language__img--wrapper">
-                    <img src="./img portofolio/react logo.png" alt="" class="language__img  ">
-                </figure>
-                <span class="language__name">REACT</span>
-            </div>
-        </div>
-        </div>
-        </div>
-    </section>
-    <section id="Projects">
+    <section id="languages">
         <div class="container">
             <div class="row">
-                <h1 class="section__title">Here are some of my <span class="text--MyName"> projects</span></h1>
+                <h1 class="section__title">This is my<span class="n"> n</span><span class="my-color"> technology stack</span></h1>
+                <div class="language__list">
+                    <div class="language">
+                        <figure class="language__img--wrapper">
+                            <img src="./img portofolio/html logo 2.png" class="language__img">
+                        </figure>
+                        <span class="language__name ">HTML</span>
+                    </div>
+                    <div class="language">
+                        <figure class="language__img--wrapper">
+                            <img src="./img portofolio/css logoo.png" class="language__img">
+                        </figure>
+                        <span class="language__name ">CSS</span>
+                    </div>
+                    <div class="language">
+                        <figure class="language__img--wrapper">
+                            <img src="./img portofolio/js logoo.jpeg" class="language__img">
+                        </figure>
+                        <span class="language__name ">JS</span>
+                    </div>
+                    <div class="language">
+                        <figure class="language__img--wrapper">
+                            <img src="./img portofolio/react logoo.png" class="language__img">
+                        </figure>
+                        <span class="language__name ">REACT</span>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+    <section id="projects">
+        <div class="container">
+            <div class="row">
+                <h1 class="section__title">Here are some of my<span class="n"> n</span> <span class=" my-color ">Projects</span></h1>
                 <ul class="project__list">
                     <li class="project">
                         <div class="project__wrapper">
-                            <img src="./img portofolio/e com project.png" class="project__img" alt=" ">
+                            <img src="./img portofolio/e com project.png" class="project__img">
                             <div class="project__description">
-                                <h3 class="project__description--title">Ecommerce project</h3>
+                                <h3 class="project__description--title">E-commerce project</h3>
                                 <h4 class="project__description--sub-title">HTML,CSS</h4>
                                 <p class="project__description--para">this website is the first official website I build to practice HTML and CSS. It contains add to cart feature(but without the addition of using js) and contains many author's feater-like products.</p>
                                 <div class="project__description--links">
@@ -153,7 +149,89 @@
             </div>
         </div>
         </ul>
+        </div>
+        </div>
     </section>
+    <section id="contact">
+        <div class="content">
+            <h1>Contact Us</h1>
+            <p>thank you for contacting me. It will be a pleasure for me to get in touch with your company</p>
+        </div>
+        <div class="container">
+            <div class="contactInfo">
+                <div class="box">
+                    <div class="icon"><i class="fa fa-phone"></i></div>
+                    <div class="text">
+                        <h3>Phone</h3>
+                        <p>961+70/587546</p>
+                    </div>
+                </div>
+                <div class="box">
+                    <div class="icon">
+                        <a href="mailto:elioghanem546@gmail.com" target="_blank"><i class="fa fa-envelope-o"></i></div></a>
+                        <div class="text">
+                            <h3>Email</h3>
+                            <p>Elioghanem546@gmail.com</p>
+                        </div>
+                    </div>
+                </div>
+                <div class="contactForm">
+                    <form>
+                        <h2>Send Message</h2>
+                        <div class="inputBox">
+                            <input type="text" placeholder="Full Name">
+                        </div>
+                        <div class="inputBox">
+                            <input type="email" placeholder="Email">
+                        </div>
+                        <div class="inputBox">
+                            <textarea placeholder="Type your message..."></textarea>
+                        </div>
+                        <div class="inputBox">
+                            <input type="submit">
+                        </div>
+                    </form>
+                </div>
+            </div>
+    </section>
+    <footer>
+        <div class="row footer__row">
+            <a href="#" class="footer__anchor">
+                <figure class="footer_logo">
+                    <img src="./img portofolio/logo my name.jpg" class="mylogo-img">
+                </figure>
+                <span class="footer__logo--hover">
+                    top
+                    <i class="fas fa-arrow-up"></i>
+                </span>
+            </a>
+            <div class="footer__social--list">
+                <a href="" class="
+                footer__social--link
+                link__hover-effect
+                link__hover-effect--white
+                " target="_blank">Github</a>
+                <a href="" class="
+                footer__social--link
+                link__hover-effect
+                link__hover-effect--white
+                " target="_blank">LinkedIn</a>
+                <a href="mailto:elioghanem546@gmail.com" class="
+                footer__social--link
+                link__hover-effect
+                link__hover-effect--white
+                " target="_blank">Email</a>
+                <a href="" class="
+                footer__social--link
+                link__hover-effect
+                link__hover-effect--white
+                " target="_blank" download>Resume</a>
+            </div>
+            <div class="footer__copyright">Copyright © 2023 ElioGhanem</div>
+        </div>
+
+    </footer>
+
 </body>
 
 </html>
