adding footer,making a contact us page,links.

--- a/index.html
+++ b/index.html
@@ -160,15 +160,14 @@
         <div class="container">
             <div class="contactInfo">
                 <div class="box">
-                    <div class="icon"><i class="fa fa-phone"></i></div>
+                    <div class="icon"><a href="tel:70587546"><i class="fa fa-phone"></i></a></div>
                     <div class="text">
                         <h3>Phone</h3>
                         <p>961+70/587546</p>
                     </div>
                 </div>
                 <div class="box">
-                    <div class="icon">
-                        <a href="mailto:elioghanem546@gmail.com" target="_blank"><i class="fa fa-envelope-o"></i></div></a>
+                    <div class="icon"><a href="mailto:elioghanem546@gmail.com" target="_blank"><i class="fa fa-envelope-o"></i></div></a>
                         <div class="text">
                             <h3>Email</h3>
                             <p>Elioghanem546@gmail.com</p>
