--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./style.css">
-    <title>Document</title>
+    <title>Portofolio</title>
     <script src="https://kit.fontawesome.com/c8e4d183c2.js" crossorigin="anonymous"></script>
 </head>
 
@@ -14,19 +14,22 @@
         <nav>
             <div class="my-name">Elio Ghanem</div>
             <ul class="nav__link--list">
-                <li>
+                <li class="nav__link">
                     <a href="#languages" class="nav__link--anchor
                     nav__link-anchor--primary
+                    link__hover-effect
                     ">Languages</a>
                 </li>
-                <li>
+                <li class="nav__link">
                     <a href="#projects" class="nav__link--anchor
                     nav__link-anchor--primary
+                    link__hover-effect
                     ">Projects</a>
-                </li>
+                </li class="nav__link">
                 <li>
                     <a href="#contact" class="nav__link--anchor
                     nav__link-anchor--primary
+                    link__hover-effect
                     ">Contact</a>
                 </li>
             </ul>
@@ -40,10 +43,10 @@
                     <h1 class="about-me__info--title">Hey! I'm <span class=" my-color ">Elio Ghanem</span></h1>
                     <p class="about-me__info--para">I'm a <span class="my-color "> junior frontend software engineer </span>with a strong passion of building responsive and performant web applications.</p>
                     <div class="about-me__links">
-                        <a href="" class="about-me__link"><i class="fab fa-linkedin-in"></i></a>
-                        <a href="" class="about-me__link"><i class="fab fa-github"></i></a>
-                        <a href="" class="about-me__link"><i class="far fa-envelope"></i></a>
-                        <a href="" class="about-me__link"><i class="fas fa-file-pdf"></i></a>
+                        <a href="https://www.linkedin.com/in/elio-ghanem546" target="_blank" class="about-me__link"><i class="fab fa-linkedin-in"></i></a>
+                        <a href="https://github.com/elioghanem" target="_blank" class="about-me__link"><i class="fab fa-github"></i></a>
+                        <a href="mailto:elioghanem546@gmail.com" class="about-me__link"><i class="far fa-envelope"></i></a>
+                        <a href="./img portofolio/Elioghanem,cv.pdf" download target="_blank" class="about-me__link"><i class="fas fa-file-pdf"></i></a>
                     </div>
                 </div>
                 <figure class="about-me__img--container">
@@ -65,13 +68,13 @@
                     </div>
                     <div class="language">
                         <figure class="language__img--wrapper">
-                            <img src="./img portofolio/css logoo.png" class="language__img">
+                            <img src="./img portofolio/css_logoo-removebg-preview.png" class="language__img">
                         </figure>
                         <span class="language__name ">CSS</span>
                     </div>
                     <div class="language">
                         <figure class="language__img--wrapper">
-                            <img src="./img portofolio/js logoo.jpeg" class="language__img">
+                            <img src="./img portofolio/js_logo-removebg-preview.png" class="language__img">
                         </figure>
                         <span class="language__name ">JS</span>
                     </div>
@@ -98,8 +101,8 @@
                                 <h4 class="project__description--sub-title">HTML,CSS</h4>
                                 <p class="project__description--para">this website is the first official website I build to practice HTML and CSS. It contains add to cart feature(but without the addition of using js) and contains many author's feater-like products.</p>
                                 <div class="project__description--links">
-                                    <a href="" target="_blank" class=" project__description--link "><i class="fab fa-github "></i></a>
-                                    <a href="" target="_blank" class="project__description--link "><i class="fas fa-link "></i></a>
+                                    <a href="https://github.com/elioghanem/Ecom-project.git" target="_blank" class=" project__description--link "><i class="fab fa-github "></i></a>
+                                    <a href="./notfind.html" target="_blank" class="project__description--link "><i class="fas fa-link "></i></a>
                                 </div>
                             </div>
                         </div>
@@ -112,8 +115,8 @@
                                 <h4 class="project__description--sub-title">HTML,CSS</h4>
                                 <p class="project__description--para">this home page is about, animation my button makes the background color move from left and right when I hover, and when I hover on the link makes a smooth line appear from the left to the right.</p>
                                 <div class="project__description--links">
-                                    <a href="" target="_blank" class=" project__description--link "><i class="fab fa-github "></i></a>
-                                    <a href="" target="_blank" class="project__description--link "><i class="fas fa-link "></i></a>
+                                    <a href="https://github.com/elioghanem/button-animation-project.git" target="_blank" class=" project__description--link "><i class="fab fa-github "></i></a>
+                                    <a href="./notfind.html" target="_blank" class="project__description--link "><i class="fas fa-link "></i></a>
                                 </div>
                             </div>
                         </div>
@@ -126,8 +129,8 @@
                                 <h4 class="project__description--sub-title">HTML,CSS</h4>
                                 <p class="project__description--para">this login page contains an animation for the submit button and when we press the male or female button the font size and font-weight increase.</p>
                                 <div class="project__description--links">
-                                    <a href="" target="_blank" class=" project__description--link "><i class="fab fa-github "></i></a>
-                                    <a href="" target="_blank" class="project__description--link "><i class="fas fa-link "></i></a>
+                                    <a href="https://github.com/elioghanem/login-project.git" target="_blank" class=" project__description--link "><i class="fab fa-github "></i></a>
+                                    <a href="./notfind.html" target="_blank" class="project__description--link "><i class="fas fa-link "></i></a>
                                 </div>
                             </div>
                         </div>
@@ -140,8 +143,8 @@
                                 <h4 class="project__description--sub-title">HTML,CSS</h4>
                                 <p class="project__description--para">this register page is the register of my login page project it contains the same feater as the login page.</p>
                                 <div class="project__description--links">
-                                    <a href="" target="_blank" class=" project__description--link "><i class="fab fa-github "></i></a>
-                                    <a href="" target="_blank" class="project__description--link "><i class="fas fa-link "></i></a>
+                                    <a href="https://github.com/elioghanem/login-project.git" target="_blank" class=" project__description--link "><i class="fab fa-github "></i></a>
+                                    <a href="./notfind.html" target="_blank" class="project__description--link "><i class="fas fa-link "></i></a>
                                 </div>
                             </div>
                         </div>
@@ -205,12 +208,12 @@
                 </span>
             </a>
             <div class="footer__social--list">
-                <a href="" class="
+                <a href="https://github.com/elioghanem" class=" 
                 footer__social--link
                 link__hover-effect
                 link__hover-effect--white
                 " target="_blank">Github</a>
-                <a href="" class="
+                <a href="https://www.linkedin.com/in/elio-ghanem546" class="
                 footer__social--link
                 link__hover-effect
                 link__hover-effect--white
@@ -220,7 +223,7 @@
                 link__hover-effect
                 link__hover-effect--white
                 " target="_blank">Email</a>
-                <a href="" class="
+                <a href="./img portofolio/Elioghanem,cv.pdf" class="
                 footer__social--link
                 link__hover-effect
                 link__hover-effect--white
