adding a link to my form to be abel to send mail to my email

--- a/index.html
+++ b/index.html
@@ -178,58 +178,42 @@
                     </div>
                 </div>
                 <div class="contactForm">
-                    <form>
+                    <form action="https://formsubmit.co/elioghanem546@gmail.com" method="POST">
                         <h2>Send Message</h2>
                         <div class="inputBox">
-                            <input type="text" placeholder="Full Name">
+                            <input type="text" name="Name" placeholder="Full Name" required>
                         </div>
                         <div class="inputBox">
-                            <input type="email" placeholder="Email">
+                            <input type="email" name="Email" placeholder="Email " required>
                         </div>
-                        <div class="inputBox">
-                            <textarea placeholder="Type your message..."></textarea>
+                        <div class="inputBox ">
+                            <textarea name="Message" placeholder="Type your message... "></textarea>
                         </div>
-                        <div class="inputBox">
-                            <input type="submit">
+                        <div class="inputBox ">
+                            <button type="submit" class="input">Submit</button>
                         </div>
                     </form>
                 </div>
             </div>
     </section>
     <footer>
-        <div class="row footer__row">
-            <a href="#" class="footer__anchor">
-                <figure class="footer_logo">
-                    <img src="./img portofolio/logo my name.jpg" class="mylogo-img">
+        <div class="row footer__row ">
+            <a href="# " class="footer__anchor ">
+                <figure class="footer_logo ">
+                    <img src="./img portofolio/logo my name.jpg " class="mylogo-img ">
                 </figure>
-                <span class="footer__logo--hover">
+                <span class="footer__logo--hover ">
                     top
-                    <i class="fas fa-arrow-up"></i>
+                    <i class="fas fa-arrow-up "></i>
                 </span>
             </a>
-            <div class="footer__social--list">
-                <a href="https://github.com/elioghanem" class=" 
-                footer__social--link
-                link__hover-effect
-                link__hover-effect--white
-                " target="_blank">Github</a>
-                <a href="https://www.linkedin.com/in/elio-ghanem546" class="
-                footer__social--link
-                link__hover-effect
-                link__hover-effect--white
-                " target="_blank">LinkedIn</a>
-                <a href="mailto:elioghanem546@gmail.com" class="
-                footer__social--link
-                link__hover-effect
-                link__hover-effect--white
-                " target="_blank">Email</a>
-                <a href="./img portofolio/Elioghanem,cv.pdf" class="
-                footer__social--link
-                link__hover-effect
-                link__hover-effect--white
-                " target="_blank" download>Resume</a>
+            <div class="footer__social--list ">
+                <a href="https://github.com/elioghanem " class=" footer__social--link link__hover-effect link__hover-effect--white " target="_blank ">Github</a>
+                <a href="https://www.linkedin.com/in/elio-ghanem546 " class=" footer__social--link link__hover-effect link__hover-effect--white " target="_blank ">LinkedIn</a>
+                <a href="mailto:elioghanem546@gmail.com " class=" footer__social--link link__hover-effect link__hover-effect--white " target="_blank ">Email</a>
+                <a href="./img portofolio/Elioghanem,cv.pdf " class=" footer__social--link link__hover-effect link__hover-effect--white " target="_blank " download>Resume</a>
             </div>
-            <div class="footer__copyright">Copyright © 2023 ElioGhanem</div>
+            <div class="footer__copyright ">Copyright © 2023 ElioGhanem</div>
         </div>
 
     </footer>
