changing the project of the register with a e-com project

--- a/index.html
+++ b/index.html
@@ -137,13 +137,13 @@
                     </li>
                     <li class="project">
                         <div class="project__wrapper">
-                            <img src="./img portofolio/register page.png" class="project__img" alt=" ">
+                            <img src="./img portofolio/e-com-book-project.png" class="project__img" alt=" ">
                             <div class="project__description">
-                                <h3 class="project__description--title">Register page.</h3>
-                                <h4 class="project__description--sub-title">HTML,CSS</h4>
-                                <p class="project__description--para">this register page is the register of my login page project it contains the same feater as the login page.</p>
+                                <h3 class="project__description--title">Ecommerce Book.</h3>
+                                <h4 class="project__description--sub-title">HTML,CSS,JS</h4>
+                                <p class="project__description--para">This E-com website is one page. I used HTML and CSS and a little bit of JS..</p>
                                 <div class="project__description--links">
-                                    <a href="https://github.com/elioghanem/login-project.git" target="_blank" class=" project__description--link "><i class="fab fa-github "></i></a>
+                                    <a href="https://github.com/elioghanem/e-com-book-project.git" target="_blank" class=" project__description--link "><i class="fab fa-github "></i></a>
                                     <a href="./notfind.html" target="_blank" class="project__description--link "><i class="fas fa-link "></i></a>
                                 </div>
                             </div>
