adding a new project in the project section the project is called weather webPage.

--- a/index.html
+++ b/index.html
@@ -185,6 +185,20 @@
                             </div>
                         </div>
                     </li>
+                    <li class="project">
+                        <div class="project__wrapper">
+                            <img src="./img portofolio/api2.png" class="project__img">
+                            <div class="project__description">
+                                <h3 class="project__description--title">weather webPage</h3>
+                                <h4 class="project__description--sub-title">HTML,CSS,JS</h4>
+                                <p class="project__description--para">this webpage is my first time using a online API.This API help me find the weather.</p>
+                                <div class="project__description--links">
+                                    <a href="https://github.com/elioghanem/weatherApp-API.git" target="_blank" class=" project__description--link "><i class="fab fa-github "></i></a>
+                                    <a href="./notfind.html" target="_blank" class="project__description--link "><i class="fas fa-link "></i></a>
+                                </div>
+                            </div>
+                        </div>
+                    </li>
             </div>
         </div>
         </ul>
